Controller com exceptionHandler e testes ItemAveragesUseCase/TradeRules