@@ -6,18 +6,18 @@ import com.api.resistancesocialnetwork.model.Rebel;
 import com.api.resistancesocialnetwork.repositories.InventoryRepository;
 import com.api.resistancesocialnetwork.repositories.RebelRepository;
 import com.api.resistancesocialnetwork.rules.TradeFailureException;
+import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.test.annotation.DirtiesContext;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import java.util.List;
 
 
 @SpringBootTest
+@DirtiesContext(classMode = DirtiesContext.ClassMode.BEFORE_EACH_TEST_METHOD)
 class TradeUseCaseTest {
     @Autowired
     private RebelRepository rebelRepository;
@@ -25,31 +25,34 @@ class TradeUseCaseTest {
     private InventoryRepository inventoryRepo;
     @Autowired
     private TradeUseCase tradeUseCase;
+
+
     private final Rebel luke = new Rebel("luke", 18, "male");
     private final Rebel leia = new Rebel("leia", 30, "female");
     private final Item doritos = new Item("doritos", 1);
     private final Item fandango = new Item("fandango", 1);
-    private final Inventory lukeInv = new Inventory(new ArrayList<>( Arrays.asList(doritos) ));
-    private final Inventory leiaInv = new Inventory(new ArrayList<>( Arrays.asList(fandango) ));
+    private final Inventory lukeInv = new Inventory(List.of(doritos));
+    private final Inventory leiaInv = new Inventory(List.of(fandango));
 
     @BeforeEach
     void setUp() {
         rebelRepository.save(luke);
         rebelRepository.save(leia);
+
+        lukeInv.setRebel(luke);
+        leiaInv.setRebel(leia);
+
+        doritos.setInventory(lukeInv);
+        fandango.setInventory(leiaInv);
+
         inventoryRepo.save(lukeInv);
         inventoryRepo.save(leiaInv);
     }
 
     @Test
     void should_add_to_list() throws TradeFailureException {
-
         tradeUseCase.handle(lukeInv.getId(), doritos, leiaInv.getId(), fandango);
 
-        assertTrue(inventoryRepo.findById(lukeInv.getId())
-                .get()
-                .getItems()
-                .stream()
-                .anyMatch(item -> item.getName().equals(fandango.getName())
-                ));
+        Assertions.assertTrue(leiaInv.getItems().contains(fandango));
     }
 }
